@@ -7,6 +7,8 @@
 + добавлена проверка ошибок для переменных DataEngine
 + добавлен перевод Brazillian Portuguese (@underr)
 + добавлена украинская локализация (Виктор Слободян)
+- удален util.py
+- удалены функции createNotifyrc, поскольку они больше не нужны
 * рефакторинг конфигурационного интерфейса
 * настройки плеера были перенесены из виджета в dataengine
 * исправлен вызов readme под четырехсимвольное обозначение
