@@ -18,8 +18,6 @@
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.              #
 ############################################################################
 
-from util import *
-
 
 
 class Config():
